[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu_tracker"
version = "0.0.1"
authors = [
  { name="David Carlyn", email="davidecarlyn@gmail.com" },
]
description = "Basic package to track GPU usage across multiple remote machines."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "fabric"
]

[project.urls]
Homepage = "https://github.com/OSU-MLB/gpu-tracker"
Issues = "https://github.com/OSU-MLB/gpu-tracker/issues"

[project.scripts]
view-remote-gpus = "gpu_tracker.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_tracker"]